k8s/01-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: slugify-api
  labels:
    app: slugify-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: slugify-api
  template:
    metadata:
      labels:
        app: slugify-api
    spec:
      containers:
        - name: api
          image: slugify-api:dev
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9000
