k8s/07-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: slugify-web

spec:
  replicas: 1

  selector:
    matchLabels:
      app: slugify-web

  template:
    metadata:
      labels:
        app: slugify-web

    spec:
      containers:
        - name: web
          image: slugify-web:dev
          imagePullPolicy: Never

          ports:
            - containerPort: 3000
