k8s/02-api-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: slugify-api-service

spec:
  selector:
    app: slugify-api

  ports:
    - port: 80
      targetPort: 9000

  type: NodePort
