k8s/08-web-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: slugify-web

spec:
  selector:
    app: slugify-web

  ports:
    - port: 80
      targetPort: 3000

  type: ClusterIP
