k8s/09-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: slugify-ingress

spec:
  rules:
    - host: slugify.localhost

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: slugify-web
                port:
                  number: 80
